structure of html changed and styles modified

--- a/src/puzzle/presentation/board/board.html
+++ b/src/puzzle/presentation/board/board.html
@@ -1,10 +1,7 @@
-<div class="div-overlay">
+<div hidden class="div-overlay">
   <button id="continue">
-    <i class="fa-solid fa-play fa-3x" style="color: #5e5c64"></i>
+    <i class="fa-solid fa-play fa-2x" style="color: #5e5c64"></i>
   </button>
 </div>
 <!-- Board of the game -->
 <div id="board"></div>
-
-<!-- Continue... -->
-<button id="pause" class="button" disabled>Pause</button>
